# drift

./: .gitignore  CLAUDE.md  DRIFT_LANGUAGE_SPEC.md  DRIFT_PHASE2_RUNTIME_SPEC.md  DRIFT_PHASE3_EXAMPLES_SPEC.md  LICENSE  README.md  pyproject.toml
docs/plans/: 2026-02-23-phase1-implementation.md  2026-02-23-phase1-lexer-parser-transpiler-design.md  2026-02-23-phase2-runtime-design.md  2026-02-23-phase2-runtime-implementation.md  2026-02-24-drift-mcp-server-design.md  2026-02-24-drift-mcp-server-implementation.md
drift/: __init__.py  __main__.py  ast_nodes.py  cli.py  errors.py  lexer.py  parser.py  transpiler.py
drift_mcp/: __init__.py  __main__.py  server.py
drift_runtime/: __init__.py  ai.py  config.py  data.py  exceptions.py  pipeline.py  types.py
examples/: budget.drift  deal_analyzer.drift  hello.drift  news_analyzer.drift  news_analyzer_offline.drift  pipeline.drift  sample_comps.json  summarizer.drift  summarizer.py  transactions.csv
tests/: test_ast_nodes.py  test_cli.py  test_end_to_end.py  test_lexer.py  test_mcp_server.py  test_parser.py  test_runtime_ai.py  test_runtime_config.py  test_runtime_data.py  test_runtime_e2e.py  test_runtime_exceptions.py  test_runtime_fetch.py  test_runtime_init.py  test_runtime_pipeline.py  test_runtime_types.py  test_transpiler.py
