[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drift-lang"
version = "0.1.0"
description = "The AI-native programming language"
requires-python = ">=3.11"
license = "MIT"

[project.scripts]
drift = "drift.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
