[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drift-lang"
version = "0.1.0"
description = "The AI-native programming language"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
mcp = ["mcp>=1.0.0"]

[project.scripts]
drift = "drift.cli:main"

[tool.setuptools.packages.find]
include = ["drift*", "drift_runtime*", "drift_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
